형 변환 추가

--- a/20231004/세_수_중_최솟값.html
+++ b/20231004/세_수_중_최솟값.html
@@ -6,7 +6,7 @@
 <body>
 <script>
   function solution(a, b, c) {
-    return Math.min(a, b, c)
+    return Math.min(+a, +b, +c)
   }
 
   console.log(solution(2, 5, 1));
