봉사활동 총 소요시간 옵셔널체이닝추가

--- a/20231011/봉사활동_총_소요시간_계산하기.html
+++ b/20231011/봉사활동_총_소요시간_계산하기.html
@@ -10,7 +10,7 @@
     const timeTable = [{personnel: 1, timeRate: 1}, {personnel: 5, timeRate: 0.5}, {personnel: 10, timeRate: 0.25}, {personnel: 20, timeRate: 0.1}]
     const timeInfo = timeTable.find(timeInfo => timeInfo.personnel >= b && b)
     const timePer = timeInfo?.timeRate || (b > 20 ? 0.05 : 0)
-    return volunteers.find(volunteer => volunteer.number === a).time * timePer || 0
+    return volunteers.find(volunteer => volunteer.number === a)?.time * timePer || 0
   }
 
   console.log(solution(3, 1));
