--- a/20231011/홀수.html
+++ b/20231011/홀수.html
@@ -9,7 +9,7 @@
   function solution(arr){
     let sum=0, min=1000;
     arr.forEach((value) => {
-      sum += value % 2 !== 0 ? value : 0
+      sum += value % 2 ? value : 0
       min = value % 2 && min > value ? value : min
     })
     return [sum, min];
