--- a/20231019/큰_수_출력하기.html
+++ b/20231019/큰_수_출력하기.html
@@ -6,9 +6,7 @@
 <body>
 <script>
   function solution(n, arr){
-    return arr.filter((value, index, array) => {
-      return !index || array[index - 1] <= n
-    });
+    return arr.filter((value, index, array) => !index || array[index - 1] <= n);
   }
 
   let arr=[7, 3, 9, 5, 6, 12];
