예제 문구 숮어

--- a/20231029/가장_짧은_문자거리.html
+++ b/20231029/가장_짧은_문자거리.html
@@ -20,7 +20,7 @@
     })
   }
 
-  let str = "teacherㅁㄴㅇㄹ;ㅣ;ㅏㅁㄴㅇ러ㅏmode";
+  let str = "teachermode";
   console.log(solution(str, 'e'));
 </script>
 </body>
